# rs-assert-exists

./: Cargo.toml  README.md
src/: lib.rs
